--- a/_notebooks/2023-03-16-AP-unit2-4b.ipynb
+++ b/_notebooks/2023-03-16-AP-unit2-4b.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -125,8 +125,8 @@
       "(4, 'Eli Whitney', 'whit', 'sha256$DQwoCCCv4qqyGUMS$009c668366039f21d8d05944c0020a5b417f4587172a96201593886adad67e1f', '2023-03-15')\n",
       "(5, 'Indiana Jones', 'indi', 'sha256$6t67LoVg2Qy2hLNT$edb03fa214deb5544181cfb29e930f02f5828eb370ba3bedd41ef1037d38b134', '1920-10-21')\n",
       "(6, 'Marion Ravenwood', 'raven', 'gothackednewpassword123', '1921-10-21')\n",
-      "(7, 'Haeryn Yu', 'haeryn', '1234', '2007-04-29')\n",
-      "(8, 'Bob Ross', 'bob', '14444444444444', '1946-10-29')\n"
+      "(8, 'Bob Ross', 'bob', '14444444444444', '1946-10-29')\n",
+      "(9, 'John Yu', 'john', 'sha256$WFIk5zyz9KWZYuIy$fe11f1c15fae7ef5f47453d32abd34663edd14e2b5485e760a642b85ddc6d881', '2008-09-12')\n"
      ]
     }
    ],
@@ -170,14 +170,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A new user record Bob Ross has been created\n"
+      "A new user record will has been created\n"
      ]
     }
    ],
@@ -235,14 +235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No uid haeyrn was not found in the table\n"
+      "The row with user id will the password has been hacked\n"
      ]
     }
    ],
@@ -307,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The row with uid Bob Ross was successfully deleted\n"
+      "The row with uid 134 was successfully deleted\n"
      ]
     }
    ],
@@ -355,27 +355,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The row with uid bob was successfully deleted\n",
-      "A new user record bob has been created\n",
-      "The row with user id raven the password has been hacked\n",
-      "(1, 'Thomas Edison', 'toby', 'sha256$WOTYUzh25UQ3KLyO$2261f088c6f40028429bceec524bdea26b1146eaa8213364ac5e44fbb14bc429', '1847-02-11')\n",
-      "(2, 'Nikola Tesla', 'niko', 'sha256$cBqqDPsIoAk80rOv$f5bd4c4a6c8317dad8273140a14638d44e4fe8d3201d8a7fce800a327af63874', '2023-03-15')\n",
-      "(3, 'Alexander Graham Bell', 'lex', 'sha256$zjCcOdS8mDSbVxVG$42130b9517c0424a1d65cd0a2608ee404f308a5c62d5d226294c2807a7cbc557', '2023-03-15')\n",
-      "(4, 'Eli Whitney', 'whit', 'sha256$DQwoCCCv4qqyGUMS$009c668366039f21d8d05944c0020a5b417f4587172a96201593886adad67e1f', '2023-03-15')\n",
-      "(5, 'Indiana Jones', 'indi', 'sha256$6t67LoVg2Qy2hLNT$edb03fa214deb5544181cfb29e930f02f5828eb370ba3bedd41ef1037d38b134', '1920-10-21')\n",
-      "(6, 'Marion Ravenwood', 'raven', 'gothackednewpassword123', '1921-10-21')\n",
-      "(7, 'Haeryn Yu', 'haeryn', '1234', '2007-04-29')\n",
-      "(8, 'Bob Ross', 'bob', '14444444444444', '1946-10-29')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Menu, to run other cells from one control point\n",
     "def menu():\n",
@@ -423,7 +405,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Object Orientation vs Imperative\n",
+    "## In this implementation, do you see procedural abstraction?\n",
+    "\n",
+    "Yes, this implementation uses procedural abstraction by encapsulating each database operation into separate functions (create, read, update, delete, schema). This allows for each function to be reused and modified independently of the others, making the code more modular and easier to maintain. The menu function also provides a simple interface to access each of these functions, further abstracting away the implementation details."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Do you see data abstraction?  Complement this with Debugging example.\n",
+    "\n",
+    "Yes, I can see that the algorithm uses data abstraction. For instance, the user is not shown the implementation specifics of the database actions in the create(), read(), update(), and delete() methods. As opposed to this, the user engages with the functions at a higher level of abstraction, sending inputs and getting results without having to be aware of the precise mechanics of how the database is being accessed or changed.\n",
+    "\n",
+    "![image](https://user-images.githubusercontent.com/111464920/226158735-91b434ff-cb1a-4afd-9ed3-b7d2aa9ffb59.png)\n",
+    "\n",
+    "In terms of debugging, a straightforward illustration would be to add print lines at different locations throughout the code to assist in locating potential error locations. For instance, we could add print statements to the update() method to verify that the user-inputted numbers for uid and password are being read properly. It shows in the following above image how the program goes through each of the lines and makes sure to print all the rows. \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Object Orientation vs Imperative\n",
     "\n",
     "Object-oriented programming (OOP) and imperative programming are both popular programming paradigms, each with its own advantages and disadvantages. Here are some key differences between the two:\n",
     "\n",
@@ -433,7 +439,12 @@
     "\n",
     "3. Inheritance: In OOP, objects can inherit properties and methods from other objects, allowing for code reuse and increased modularity. In imperative programming, code is often duplicated or reused by copying and pasting.\n",
     "\n",
-    "Overall, OOP is often seen as more organized, modular, and reusable than imperative programming. However, imperative programming can be more efficient for certain tasks, particularly those that involve a lot of low-level manipulation of data. Ultimately, the choice between the two will depend on the specific needs of the project and the preferences of the programmer."
+    "Overall, OOP is often seen as more organized, modular, and reusable than imperative programming. However, imperative programming can be more efficient for certain tasks, particularly those that involve a lot of low-level manipulation of data. Ultimately, the choice between the two will depend on the specific needs of the project and the preferences of the programmer.\n",
+    "\n",
+    "### My CPT Addition\n",
+    "\n",
+    "Therefore, I prefer OOP much more and decided to use it to input more features into my data table. \n",
+    "![image](https://user-images.githubusercontent.com/111464920/226158804-29807026-0473-4c6d-b640-bfea668eaf6b.png)"
    ]
   }
  ],
