--- a/_posts/2023-03-16-AP-unit2-4b.md
+++ b/_posts/2023-03-16-AP-unit2-4b.md
@@ -185,8 +185,8 @@ layout: notebook
 (4, &#39;Eli Whitney&#39;, &#39;whit&#39;, &#39;sha256$DQwoCCCv4qqyGUMS$009c668366039f21d8d05944c0020a5b417f4587172a96201593886adad67e1f&#39;, &#39;2023-03-15&#39;)
 (5, &#39;Indiana Jones&#39;, &#39;indi&#39;, &#39;sha256$6t67LoVg2Qy2hLNT$edb03fa214deb5544181cfb29e930f02f5828eb370ba3bedd41ef1037d38b134&#39;, &#39;1920-10-21&#39;)
 (6, &#39;Marion Ravenwood&#39;, &#39;raven&#39;, &#39;gothackednewpassword123&#39;, &#39;1921-10-21&#39;)
-(7, &#39;Haeryn Yu&#39;, &#39;haeryn&#39;, &#39;1234&#39;, &#39;2007-04-29&#39;)
 (8, &#39;Bob Ross&#39;, &#39;bob&#39;, &#39;14444444444444&#39;, &#39;1946-10-29&#39;)
+(9, &#39;John Yu&#39;, &#39;john&#39;, &#39;sha256$WFIk5zyz9KWZYuIy$fe11f1c15fae7ef5f47453d32abd34663edd14e2b5485e760a642b85ddc6d881&#39;, &#39;2008-09-12&#39;)
 </pre>
 </div>
 </div>
@@ -259,7 +259,7 @@ layout: notebook
 <div class="output_area">
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>A new user record Bob Ross has been created
+<pre>A new user record will has been created
 </pre>
 </div>
 </div>
@@ -346,7 +346,7 @@ layout: notebook
 <div class="output_area">
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>No uid haeyrn was not found in the table
+<pre>The row with user id will the password has been hacked
 </pre>
 </div>
 </div>
@@ -420,7 +420,7 @@ layout: notebook
 <div class="output_area">
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>The row with uid Bob Ross was successfully deleted
+<pre>The row with uid 134 was successfully deleted
 </pre>
 </div>
 </div>
@@ -478,30 +478,6 @@ layout: notebook
 </div>
 </div>
 
-<div class="output_wrapper">
-<div class="output">
-
-<div class="output_area">
-
-<div class="output_subarea output_stream output_stdout output_text">
-<pre>The row with uid bob was successfully deleted
-A new user record bob has been created
-The row with user id raven the password has been hacked
-(1, &#39;Thomas Edison&#39;, &#39;toby&#39;, &#39;sha256$WOTYUzh25UQ3KLyO$2261f088c6f40028429bceec524bdea26b1146eaa8213364ac5e44fbb14bc429&#39;, &#39;1847-02-11&#39;)
-(2, &#39;Nikola Tesla&#39;, &#39;niko&#39;, &#39;sha256$cBqqDPsIoAk80rOv$f5bd4c4a6c8317dad8273140a14638d44e4fe8d3201d8a7fce800a327af63874&#39;, &#39;2023-03-15&#39;)
-(3, &#39;Alexander Graham Bell&#39;, &#39;lex&#39;, &#39;sha256$zjCcOdS8mDSbVxVG$42130b9517c0424a1d65cd0a2608ee404f308a5c62d5d226294c2807a7cbc557&#39;, &#39;2023-03-15&#39;)
-(4, &#39;Eli Whitney&#39;, &#39;whit&#39;, &#39;sha256$DQwoCCCv4qqyGUMS$009c668366039f21d8d05944c0020a5b417f4587172a96201593886adad67e1f&#39;, &#39;2023-03-15&#39;)
-(5, &#39;Indiana Jones&#39;, &#39;indi&#39;, &#39;sha256$6t67LoVg2Qy2hLNT$edb03fa214deb5544181cfb29e930f02f5828eb370ba3bedd41ef1037d38b134&#39;, &#39;1920-10-21&#39;)
-(6, &#39;Marion Ravenwood&#39;, &#39;raven&#39;, &#39;gothackednewpassword123&#39;, &#39;1921-10-21&#39;)
-(7, &#39;Haeryn Yu&#39;, &#39;haeryn&#39;, &#39;1234&#39;, &#39;2007-04-29&#39;)
-(8, &#39;Bob Ross&#39;, &#39;bob&#39;, &#39;14444444444444&#39;, &#39;1946-10-29&#39;)
-</pre>
-</div>
-</div>
-
-</div>
-</div>
-
 </div>
     {% endraw %}
 
@@ -523,7 +499,23 @@ The row with user id raven the password has been hacked
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Object-Orientation-vs-Imperative">Object Orientation vs Imperative<a class="anchor-link" href="#Object-Orientation-vs-Imperative"> </a></h1><p>Object-oriented programming (OOP) and imperative programming are both popular programming paradigms, each with its own advantages and disadvantages. Here are some key differences between the two:</p>
+<h2 id="In-this-implementation,-do-you-see-procedural-abstraction?">In this implementation, do you see procedural abstraction?<a class="anchor-link" href="#In-this-implementation,-do-you-see-procedural-abstraction?"> </a></h2><p>Yes, this implementation uses procedural abstraction by encapsulating each database operation into separate functions (create, read, update, delete, schema). This allows for each function to be reused and modified independently of the others, making the code more modular and easier to maintain. The menu function also provides a simple interface to access each of these functions, further abstracting away the implementation details.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Do-you-see-data-abstraction?--Complement-this-with-Debugging-example.">Do you see data abstraction?  Complement this with Debugging example.<a class="anchor-link" href="#Do-you-see-data-abstraction?--Complement-this-with-Debugging-example."> </a></h2><p>Yes, I can see that the algorithm uses data abstraction. For instance, the user is not shown the implementation specifics of the database actions in the create(), read(), update(), and delete() methods. As opposed to this, the user engages with the functions at a higher level of abstraction, sending inputs and getting results without having to be aware of the precise mechanics of how the database is being accessed or changed.</p>
+<p><img src="https://user-images.githubusercontent.com/111464920/226158735-91b434ff-cb1a-4afd-9ed3-b7d2aa9ffb59.png" alt="image"></p>
+<p>In terms of debugging, a straightforward illustration would be to add print lines at different locations throughout the code to assist in locating potential error locations. For instance, we could add print statements to the update() method to verify that the user-inputted numbers for uid and password are being read properly. It shows in the following above image how the program goes through each of the lines and makes sure to print all the rows.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Object-Orientation-vs-Imperative">Object Orientation vs Imperative<a class="anchor-link" href="#Object-Orientation-vs-Imperative"> </a></h2><p>Object-oriented programming (OOP) and imperative programming are both popular programming paradigms, each with its own advantages and disadvantages. Here are some key differences between the two:</p>
 <ol>
 <li><p>Focus: Imperative programming focuses on how to achieve a specific task, while OOP focuses on the creation and manipulation of objects.</p>
 </li>
@@ -533,6 +525,8 @@ The row with user id raven the password has been hacked
 </li>
 </ol>
 <p>Overall, OOP is often seen as more organized, modular, and reusable than imperative programming. However, imperative programming can be more efficient for certain tasks, particularly those that involve a lot of low-level manipulation of data. Ultimately, the choice between the two will depend on the specific needs of the project and the preferences of the programmer.</p>
+<h3 id="My-CPT-Addition">My CPT Addition<a class="anchor-link" href="#My-CPT-Addition"> </a></h3><p>Therefore, I prefer OOP much more and decided to use it to input more features into my data table. 
+<img src="https://user-images.githubusercontent.com/111464920/226158804-29807026-0473-4c6d-b640-bfea668eaf6b.png" alt="image"></p>
 
 </div>
 </div>
