--- a/_notebooks/2023-03-13-AP-unit2-4a.ipynb
+++ b/_notebooks/2023-03-13-AP-unit2-4a.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,19 +273,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created new uid toby\n",
-      "Created new uid niko\n",
-      "Created new uid lex\n",
-      "Created new uid whit\n",
-      "Created new uid indi\n",
-      "Created new uid raven\n"
+      "Records exist uid toby, or error.\n",
+      "Records exist uid niko, or error.\n",
+      "Records exist uid lex, or error.\n",
+      "Records exist uid whit, or error.\n",
+      "Records exist uid indi, or error.\n",
+      "Records exist uid raven, or error.\n"
      ]
     }
    ],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -389,8 +389,18 @@
      "output_type": "stream",
      "text": [
       "Created\n",
-      " {'id': 7, 'name': 'Haeryn Yu', 'uid': 'haeryn', 'dob': '04-29-2007', 'age': 15}\n"
+      " {'id': 9, 'name': 'John Yu', 'uid': 'john', 'dob': '09-12-2008', 'age': 14}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -450,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -486,14 +496,11 @@
        "  'uid': 'raven',\n",
        "  'dob': '10-21-1921',\n",
        "  'age': 101},\n",
-       " {'id': 7,\n",
-       "  'name': 'Haeryn Yu',\n",
-       "  'uid': 'haeryn',\n",
-       "  'dob': '04-29-2007',\n",
-       "  'age': 15}]"
+       " {'id': 8, 'name': 'Bob Ross', 'uid': 'bob', 'dob': '10-29-1946', 'age': 76},\n",
+       " {'id': 9, 'name': 'John Yu', 'uid': 'john', 'dob': '09-12-2008', 'age': 14}]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,36 +532,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The row with user id haeryn the password has been successfully updated\n"
+     ]
+    }
+   ],
    "source": [
-    "# CRUD update: updates user name, password, phone\n",
-    "# returns self\n",
-    "def update(self, name=\"\", uid=\"\", password=\"\"):\n",
-    "    \"\"\"only updates values with length\"\"\"\n",
-    "    if len(name) > 0:\n",
-    "        self.name = name\n",
-    "    if len(uid) > 0:\n",
-    "        self.uid = uid\n",
-    "    if len(password) > 0:\n",
-    "        self.set_password(password)\n",
-    "    db.session.commit()\n",
-    "    return self"
+    "def update():\n",
+    "    uid = input(\"Enter user id to update\")\n",
+    "    password = input(\"Enter updated password\")\n",
+    "    if len(password) < 2:\n",
+    "        message = \"hacked\"\n",
+    "        password = 'gothackednewpassword123'\n",
+    "    else:\n",
+    "        message = \"successfully updated\"\n",
+    "\n",
+    "    try:\n",
+    "        # Query the User model and update the password for the user with the given uid\n",
+    "        user = db.session.query(User).filter_by(uid=uid).first()\n",
+    "        if user is not None:\n",
+    "            user.password = password\n",
+    "            db.session.commit()\n",
+    "            print(f\"The password for user id {uid} has been {message}\")\n",
+    "        else:\n",
+    "            print(f\"No uid {uid} was found in the database\")\n",
+    "    except:\n",
+    "        print(f\"Error while updating password for user id {uid}\")\n",
+    "\n",
+    "    # Query the User model and return the results as a list of JSON objects\n",
+    "    with app.app_context():\n",
+    "        table = User.query.all()\n",
+    "    json_ready = [user.update() for user in table]\n",
+    "    return json_ready\n",
+    "\n",
+    "update()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The row with uid haeryn was successfully deleted\n"
+     ]
+    }
+   ],
    "source": [
-    "# CRUD delete: remove self\n",
-    "# None\n",
-    "def delete():\n",
-    "    db.session.delete(self)\n",
-    "    db.session.commit()\n",
-    "    return None"
+    "def delete(uid):\n",
+    "    try:\n",
+    "        # Query the User model and delete the user with the given uid\n",
+    "        user = db.session.query(User).filter_by(uid=uid).first()\n",
+    "        if user is not None:\n",
+    "            db.session.delete(user)\n",
+    "            db.session.commit()\n",
+    "            print(f\"The user with uid {uid} was successfully deleted\")\n",
+    "        else:\n",
+    "            print(f\"No user with uid {uid} was found in the database\")\n",
+    "    except:\n",
+    "        print(f\"Error while deleting user with uid {uid}\")\n",
+    "\n",
+    "    # Query the User model and return the results as a list of JSON objects\n",
+    "    with app.app_context():\n",
+    "        users = User.query.all()\n",
+    "    json_ready = [user.to_json() for user in users]\n",
+    "    return json_ready\n",
+    "\n",
+    "delete ()"
    ]
   }
  ],
