--- a/_notebooks/2023-03-13-AP-unit2-4a.ipynb
+++ b/_notebooks/2023-03-13-AP-unit2-4a.ipynb
@@ -129,15 +129,17 @@
     "    _uid = db.Column(db.String(255), unique=True, nullable=False)\n",
     "    _password = db.Column(db.String(255), unique=False, nullable=False)\n",
     "    _dob = db.Column(db.Date)\n",
+    "    _zodiac = db.Column(db.String(255), unique=False, nullable=False)\n",
     "\n",
     "    # constructor of a User object, initializes the instance variables within object (self)\n",
-    "    def __init__(self, name, uid, password=\"123qwerty\", dob=datetime.today()):\n",
+    "    def __init__(self, name, uid, password=\"123qwerty\", dob=datetime.today(), zodiac):\n",
     "        self._name = name    # variables with self prefix become part of the object, \n",
     "        self._uid = uid\n",
     "        self.set_password(password)\n",
     "        if isinstance(dob, str):  # not a date type     \n",
     "            dob = date=datetime.today()\n",
     "        self._dob = dob\n",
+    "        self._zodiac = zodiac\n",
     "\n",
     "    # a name getter method, extracts name from object\n",
     "    @property\n",
@@ -148,6 +150,16 @@
     "    @name.setter\n",
     "    def name(self, name):\n",
     "        self._name = name\n",
+    "\n",
+    "    # a name getter method, extracts name from object\n",
+    "    @property\n",
+    "    def zodiac(self):\n",
+    "        return self._zodiac\n",
+    "    \n",
+    "    # a setter function, allows name to be updated after initial object creation\n",
+    "    @zodiac.setter\n",
+    "    def zodiac(self, zodiac):\n",
+    "        self._zodiac = zodiac\n",
     "    \n",
     "    # a getter method, extracts uid from object\n",
     "    @property\n",
@@ -223,11 +235,12 @@
     "            \"uid\": self.uid,\n",
     "            \"dob\": self.dob,\n",
     "            \"age\": self.age,\n",
+    "            \"zodiac\": self.zodiac,\n",
     "        }\n",
     "\n",
     "    # CRUD update: updates user name, password, phone\n",
     "    # returns self\n",
-    "    def update(self, name=\"\", uid=\"\", password=\"\"):\n",
+    "    def update(self, name=\"\", uid=\"\", password=\"\", zodiac=\"\"):\n",
     "        \"\"\"only updates values with length\"\"\"\n",
     "        if len(name) > 0:\n",
     "            self.name = name\n",
@@ -298,12 +311,12 @@
     "        \"\"\"Create database and tables\"\"\"\n",
     "        db.create_all()\n",
     "        \"\"\"Tester data for table\"\"\"\n",
-    "        u1 = User(name='Thomas Edison', uid='toby', password='123toby', dob=datetime(1847, 2, 11))\n",
-    "        u2 = User(name='Nikola Tesla', uid='niko', password='123niko')\n",
-    "        u3 = User(name='Alexander Graham Bell', uid='lex', password='123lex')\n",
-    "        u4 = User(name='Eli Whitney', uid='whit', password='123whit')\n",
-    "        u5 = User(name='Indiana Jones', uid='indi', dob=datetime(1920, 10, 21))\n",
-    "        u6 = User(name='Marion Ravenwood', uid='raven', dob=datetime(1921, 10, 21))\n",
+    "        u1 = User(name='Thomas Edison', uid='toby', password='123toby', dob=datetime(1847, 2, 11), zodiac=\"taurus\")\n",
+    "        u2 = User(name='Nikola Tesla', uid='niko', password='123niko', zodiac=\"leo\")\n",
+    "        u3 = User(name='Alexander Graham Bell', uid='lex', password='123lex', zodiac=\"gemini\")\n",
+    "        u4 = User(name='Eli Whitney', uid='whit', password='123whit', zodiac=\"aquarius\")\n",
+    "        u5 = User(name='Indiana Jones', uid='indi', dob=datetime(1920, 10, 21), zodiac=\"aries\")\n",
+    "        u6 = User(name='Marion Ravenwood', uid='raven', dob=datetime(1921, 10, 21), zodiac=\"capricorn\")\n",
     "\n",
     "\n",
     "        users = [u1, u2, u3, u4, u5, u6]\n",
