--- a/_notebooks/2023-01-19-PBL-control.ipynb
+++ b/_notebooks/2023-01-19-PBL-control.ipynb
@@ -164,10 +164,8 @@
     "```\n",
     "\n",
     "***`Test` API GET locally with Postman***.  Observe that tests may be saved.  \n",
-    "![](images/postmain_read_get_users.png)\n",
     "\n",
-    "***`Test` API POST locally with Postman***.  In this case, Postman can be used to add new records to the table.  Observe options to pass data using Body raw-json.\n",
-    "![](images/postman_create_post_users.png)"
+    "***`Test` API POST locally with Postman***.  In this case, Postman can be used to add new records to the table.  Observe options to pass data using Body raw-json."
    ]
   },
   {
