--- a/_notebooks/2023-03-22-DS-space_time_complexity.ipynb
+++ b/_notebooks/2023-03-22-DS-space_time_complexity.ipynb
@@ -14590,8 +14590,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Example of Matrix Multiplication](images/multiply_matrices.png)\n",
-    "\n",
     "- Main take away is that a new matrix is created."
    ]
   },
@@ -14701,7 +14699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![A visualization of calculating the fibonacci sequence](images/fibonacci.webp)"
+    "![A visualization of calculating the fibonacci sequence]"
    ]
   },
   {
