--- a/_notebooks/2023-03-29-DS-hashmaps.ipynb
+++ b/_notebooks/2023-03-29-DS-hashmaps.ipynb
@@ -233,9 +233,7 @@
     "    - What are the pro and cons of using this data structure? \n",
     "    - Dictionary vs List    \n",
     "- Expand upon the code given to you, possible improvements in comments\n",
-    "- Build your own album showing features of a python dictionary\n",
-    "\n",
-    "- For Mr. Yeung's class: Justify your favorite Taylor Swift song, answer may effect seed"
+    "- Build your own album showing features of a python dictionary"
    ]
   }
  ],
@@ -257,7 +255,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "73e69797c171608e1a23b0d5ea049a3a0a33cc0f08b06d092251f025d0b9cf2b"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
