--- a/_notebooks/2023-04-02-Parallel-Computing-Hacks.ipynb
+++ b/_notebooks/2023-04-02-Parallel-Computing-Hacks.ipynb
@@ -18,8 +18,7 @@
     "### AP Classroom\n",
     "> AP Classroom. Provide answers and thoughts on theoritical question form college board Video in section 4.3.  They start at about the 9 minute mark.\n",
     "\n",
-    "\n",
-    "#### Example 1\n",
+    "### Example 1\n",
     "A particular computer has two identical processors which can run in parallel. Each Process must be executed on a single processor and each processor can only run one process at a time. \n",
     "\n",
     "The table below lists the amount of time it takes to execute each of the processes on a single computer. None of the processes are dependent on any of the others. \n",
@@ -37,7 +36,7 @@
     "\n",
     "If we run the processes sequentially on a single processor, it will take a total of 50 + 10 + 30 = 90 seconds. However, we have two identical processors available, so we can run two processes in parallel. The bottleneck process will be the one with the longest execution time, which is process X with 50 seconds. The other two processes can be completed in the remaining time it takes to complete process X. So, we can run processes Y and Z simultaneously on the two processors, which will take a total of 30 seconds (since Z takes 30 seconds to execute). Once process Z is complete, we can use one processor to complete process X, which will take another 20 seconds. Therefore, the total time required to complete all three processes using both processors is 20 + 30 = 50 seconds. Thus, the minimum amount of time required to execute all three processes when the two processors are run in parallel is 50 seconds.\n",
     "\n",
-    "#### Example 2\n",
+    "### Example 2\n",
     "A computer has two duplicate processors that are able to run in parallel. The table below shows the amount of time it takes each processor to execute each of two processes. Neither process is dependent on the other. \n",
     "\n",
     "|Process|Execution Time on Either Processor|\n",
