--- a/_notebooks/2023-04-25-P4Y-SASSGuide.ipynb
+++ b/_notebooks/2023-04-25-P4Y-SASSGuide.ipynb
@@ -5,49 +5,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# P4-Y 4/25 Guide to SASS \n",
-    "> An guide on how to use SASS to build a more customized frontend.\n",
+    "# Guide to SASS Hacks \n",
     "- toc: true\n",
     "- comments: true\n",
-    "- badges: false\n",
-    "- author: Aniket Chakradeo, Ryan Hakimipour, Max Tullius, Jaden Nguyen, Nathan Kim, Kalani Cabral-Omana, Evan Appari, Max Wu, \n",
-    "- categories: [student]\n",
-    "- type: ap\n",
-    "- week: 31"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# WGET this file and complete fully and thoroughly in order to be receive credit\n",
-    "\n",
-    "[Wget Link](https://raw.githubusercontent.com/nighthawkcoders/APCSP/master/_notebooks/2023-04-25-P4Y-SASSGuide.ipynb)\n",
-    "\n",
-    "## Team Lesson Plan: \n",
-    "\n",
-    "SASS Part 1- Nathan, Aniket, Kalani\n",
-    "- Basic UI Properties and what they mean\n",
-    "- Color properties\n",
-    "- Themes\n",
-    "- SASS Definition/What it is useful for\n",
-    "- SASS code segments w/ comparison to css\n",
-    "- Demonstration of SASS\n",
-    "\n",
-    "SASS Part 2- Max W, Evan \n",
-    "- More UI Properties\n",
-    "- UX\n",
-    "- Layouts\n",
-    "- Animation/animation code for UI\n",
-    "\n",
-    "Building JavaScript Game or Application- Ryan, Jaden\n",
-    "- Before vs After Minesweeper Game - how to customize \n",
-    "- Building a java script game and what it requires\n",
-    "\n",
-    "Hacks Page - Kalani, Max T\n",
-    "- Students must create their own hack (simple app,game, etc using key components from the lesson) \n",
-    "- Make sure the students can wget the file so they can work on it for their hacks\n"
+    "- badges: false"
    ]
   },
   {
@@ -59,26 +20,25 @@
     "\n",
     "### What are 5 Basic UI Elements?:\n",
     "\n",
-    "1. \n",
-    "2.\n",
-    "3.\n",
-    "4. \n",
-    "5. \n",
+    "1. Color \n",
+    "2. Font\n",
+    "3. Layout\n",
+    "4. Icons\n",
+    "5. Accesibility\n",
     "\n",
     "### In your own words, explain what SASS does:\n",
-    "- \n",
+    "- SASS is an extension of CSS which can be used to create and style parts of your website. It helps improve the complexity of your page by putting all your styles into specific styles where you are able to style your website.\n",
     "\n",
     "### What are some benefits to SASS?: \n",
-    "- \n",
+    "- SASS has variables that we can not use in CSS. They also have builtin features and reduces complexity in code.\n",
     "\n",
     "### Describe/Explain one of the more \"advanced\" SASS properties below in detail:\n",
-    "- \n",
+    "- The variable property that is part of the \"advanced\" SASS properties help with the overall complexity with your program. You can create variables with the dollar signs and you are able to reduce the complexities. They are easy to communicate with and can be used easily. These variables help with all the code as you are able to reference it in different parts of your SASS and you do not have to write the color over and over again.\n",
     "\n",
     "## [Link to Number Guesser Game](https://anicricket.github.io/tmv4/_pages/numberguesser_v3.html)\n",
     "\n",
-    "\n",
     "### How does the number guesser game work?\n",
-    "-\n",
+    "- \n",
     "\n",
     "### Explain how SASS can be used to make the number guesser game look more visually appealing?\n",
     "- "
@@ -108,14 +68,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "<html>\n",
     "<head>\n",
@@ -151,7 +106,7 @@
     "    }\n",
     "  </script>\n",
     "</body>\n",
-    "</html>\n"
+    "</html>"
    ]
   }
  ],
