--- a/_notebooks/2023-04-25-P4Y-SASSGuide.ipynb
+++ b/_notebooks/2023-04-25-P4Y-SASSGuide.ipynb
@@ -38,10 +38,10 @@
     "## [Link to Number Guesser Game](https://anicricket.github.io/tmv4/_pages/numberguesser_v3.html)\n",
     "\n",
     "### How does the number guesser game work?\n",
-    "- \n",
+    "- The number guesser game chooses a number between one through hundred and based on the user's input, the program will ouput one out of three options. The program will say either the number is too high, too low, or is correct. They track how many inputs the user made before they guessed the correct number. \n",
     "\n",
     "### Explain how SASS can be used to make the number guesser game look more visually appealing?\n",
-    "- "
+    "- SASS changed the color scheme and the font. It would give the user a more satisfactory exeperience as it is easier to navigate and aesthetically pleasing to look at. The colors are bright and helps increase the user's mood and be more engaging to the program, making the overall game better than it was before."
    ]
   },
   {
@@ -53,6 +53,9 @@
     "\n",
     "## Hacks Part 1\n",
     "1. Add your own element to your own repository to make it unique (0.9)\n",
+    "> I added an image to my fastpage and also changed the background color and text color to blue and white. I also made the border grey when it was previously green. \n",
+    "![image](https://user-images.githubusercontent.com/111464920/234402206-f19ec8a3-b31f-4358-a2b0-1df9920fb679.png)\n",
+    "\n",
     "\n",
     "## Hacks Part 2\n",
     "1. Add the style change button to your own github page (0.9)\n",
@@ -69,10 +72,10 @@
   },
   {
    "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "<html>\n",
+    "  <html>\n",
     "<head>\n",
     "  <title>Guess the Number</title>\n",
     "</head>\n",
@@ -111,8 +114,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
